tests/lean/indimpltarget.lean.expected.out
indimpltarget.lean:6:2-6:45: error: failed to infer implicit target, it contains unresolved metavariables
  ?m
indimpltarget.lean:16:2-16:45: error: failed to infer implicit target, it contains unresolved metavariables
  ?m
indimpltarget.lean:26:0-26:7: warning: declaration uses 'sorry'
